* Update pustike maven parent version to 0.1.3 * Other general improvements